ParserProject/Parser.cs
﻿using System;
using LexerProject;
using LexerProject.Tokens;
using ParserProject.Exceptions;
using ParserProject.Extensions;
using System.Collections.Generic;
using ParserProject.Nodes.ExtendsNodes;
using ParserProject.Nodes.NameSpaceNodes;
using ParserProject.Nodes.StatementNodes;
using ParserProject.Nodes.ExpressionNodes;
using ParserProject.Nodes.ClassModifierNodes;
using ParserProject.Nodes.PrivacyModifierNodes;
using ParserProject.Nodes.NameSpaceNodes.EnumNodes;
using ParserProject.Nodes.ExpressionNodes.UnaryNodes;
using ParserProject.Nodes.ExpressionNodes.PreIdNodes;
using ParserProject.Nodes.ExpressionNodes.PostIdNodes;
using ParserProject.Nodes.ExpressionNodes.AccesorNodes;
using ParserProject.Nodes.ExpressionNodes.LiteralNodes;
using ParserProject.Nodes.NameSpaceNodes.InterfaceNodes;
using ParserProject.BinaryOperators.ExpressionNodes.Nodes;
 using ParserProject.Nodes.ExpressionNodes.AssignationNodes;
 using ParserProject.Nodes.ExpressionNodes.BinaryOperators;
 using ParserProject.Nodes.ExpressionNodes.CastExpresionNodes;
 using ParserProject.Nodes.ExpressionNodes.PrimitiveTypeNodes;
using ParserProject.Nodes.ExpressionNodes.NewExpressionNodes;
using ParserProject.Nodes.ExpressionNodes.TypeProductionNodes;
using ParserProject.Nodes.NameSpaceNodes.ClassDeclarationNodes;
 using ParserProject.Nodes.NameSpaceNodes.MethodModiferNodes;
 using ParserProject.Nodes.StatementNodes.DeclarationAsignationStatementNodes;


namespace ParserProject
{
    public class Parser
    {
        private readonly Lexer _lexer;
        private Token _currentToken;

        public Parser(Lexer lexer)
        {
            _lexer = lexer;
            _currentToken = _lexer.GetNextToken();
        }

        public Parser(){
            
        }

        public List<CodeNode> Parse()
        {
             var codeList=Code();

            if (_currentToken.Type != TokenType.Eof)
                throw new SintacticalException("Expected Eof");
            return codeList;
        }

        private List<CodeNode> Code()
        {
            return NameSpaceList();
        }

        private List<CodeNode> NameSpaceList()
        {
            if (_currentToken.Type.IsNameSpace())
            {
                var namespaceNode=NameSpace();
                var list=NameSpaceList();
                list.Insert(0,namespaceNode);
                return list;
            }
            else
            {
                return new List<CodeNode>();
            }

        }

        private CodeNode NameSpace()
        {
            var usingDirectiveList=UsingDirectives();
            var namespaceDeclarationList=NameSpaceDeclarations();
            return new CodeNode{UsingDirectiveList=usingDirectiveList,NameSpaceDeclarationList=namespaceDeclarationList};
        }

        private List<UsingDirectiveNode> UsingDirectives()
        {
            if (_currentToken.Type == TokenType.RwUsing)
            {
                var usingdirective=UsingDirective();
                var list=UsingDirectives();
                list.Insert(0,usingdirective);
                return list;
            }
            else
            {
                return new List<UsingDirectiveNode>();
            }
        }

        private UsingDirectiveNode UsingDirective()
        {
            if (_currentToken.Type != TokenType.RwUsing)
                throw new SintacticalException("Expected using Line " + _currentToken.Line + " Col " +
                                               _currentToken.Column);
            _currentToken = _lexer.GetNextToken();
            var idtype=TypeName();
            if (_currentToken.Type != TokenType.EndStatement)
                throw new SintacticalException("Expected ; Line " + _currentToken.Line + " Col " + _currentToken.Column);
            _currentToken = _lexer.GetNextToken();

            return new UsingDirectiveNode(idtype);
        }

        private IdTypeNode TypeName()
        {
            var idlexeme = _currentToken.Lexeme;
            if (_currentToken.Type != TokenType.Id)
                throw new SintacticalException("Expected Id Line " + _currentToken.Line + " Col " +
                                               _currentToken.Column);
            _currentToken = _lexer.GetNextToken();
            var idnode=TypeNamePrime();
            return new IdTypeNode(idlexeme, idnode);
        }

        private IdTypeNode TypeNamePrime()
        {
            if (_currentToken.Type == TokenType.Period)
            {
                var idlexeme = _currentToken = _lexer.GetNextToken();
                if (_currentToken.Type != TokenType.Id)
                    throw new SintacticalException("Expected Id Line " + _currentToken.Line + " Col " +
                                                   _currentToken.Column);
                _currentToken = _lexer.GetNextToken();
                var idnode = TypeNamePrime();
                return new IdTypeNode(idlexeme.Lexeme, idnode);
            }
            else
            {
                return null;
            }
        }

        private List<NameSpaceDeclarationNode> NameSpaceDeclarations()
        {
            if (_currentToken.Type.IsPrivacyModifier() || _currentToken.Type == TokenType.RwNamespace || _currentToken.Type.IsClassModifier() || _currentToken.Type == TokenType.RwClass
                || _currentToken.Type == TokenType.RwInterface || _currentToken.Type == TokenType.RwEnum)
            {
                var nameSpaceNode=NameSpaceDeclaration();
                var list=NameSpaceDeclarations();
                list.Insert(0,nameSpaceNode);
                return list;
            }
            else
            {
                return new List<NameSpaceDeclarationNode>();
            }
        }

        private NameSpaceDeclarationNode NameSpaceDeclaration()
        {
            if (_currentToken.Type == TokenType.RwNamespace)
            {
                return NameSpaceStatement();
            }
            else
            {
                var privacyNode=PrivacyModifier();
                return ClassInterfaceEnum(privacyNode);
            }

        }

        private NameSpaceNode NameSpaceStatement()
		{
			if (_currentToken.Type != TokenType.RwNamespace)
				throw new SintacticalException("Expected Namespace Line " + _currentToken.Line + " Col " +
											   _currentToken.Column);
			_currentToken = _lexer.GetNextToken();
			var id = TypeName();
			var code = NameSpaceBody();
            return new NameSpaceNode { IdNode = id ,Code=code };

		}

        private CodeNode NameSpaceBody()
		{
			if (_currentToken.Type != TokenType.KeyOpen)
				throw new SintacticalException("Expected { Line " + _currentToken.Line + " Col " +
											   _currentToken.Column);
			_currentToken = _lexer.GetNextToken();
			var codeNode=NameSpace();
			if (_currentToken.Type != TokenType.KeyClose)
				throw new SintacticalException("Expected } Line " + _currentToken.Line + " Col " +
											   _currentToken.Column);
			_currentToken = _lexer.GetNextToken();
            return codeNode;
		}

        private PrivacyModifierNode PrivacyModifier()
        {
            if (_currentToken.Type == TokenType.RwPublic)
            {
                _currentToken = _lexer.GetNextToken();
                return new PublicNode();
            }
            else if (_currentToken.Type == TokenType.RwPrivate)
            {
                _currentToken = _lexer.GetNextToken();
                return new PrivateNode();
            }
            else if (_currentToken.Type == TokenType.RwProtected)
            {
                _currentToken = _lexer.GetNextToken();
                return new ProtectedNode();
            }
            else
            {
                return null;
            }
        }

        private NameSpaceDeclarationNode ClassInterfaceEnum(PrivacyModifierNode privacyNode)
        {
            if (_currentToken.Type == TokenType.RwInterface)
            {
                var interfaceStructure = InterfaceDeclaration();
                return new InterfaceDeclarationNode { PrivacyModifierNode = privacyNode, InterfaceStructure = interfaceStructure };

            }
            else if (_currentToken.Type == TokenType.RwEnum)
            {
                var enumstructure=EnumDeclaration();
                return new EnumDeclarationNode { PrivacyModifierNode = privacyNode, EnumStructure = enumstructure };
            }
            else if (_currentToken.Type == TokenType.RwClass || _currentToken.Type.IsClassModifier())
            {
                var classStructure = ClassDeclaration();
                return new ClassDeclarationNode { PrivacyModifierNode = privacyNode, ClassStructure = classStructure  };
            }
            else
                throw new SintacticalException("Expected inteface,enum,class or class modifiers Line " +
                                               _currentToken.Line + " Col " +
                                               _currentToken.Column);
        }

        private InterfaceStructureNode InterfaceDeclaration()
        {
            if (_currentToken.Type != TokenType.RwInterface)
                throw new SintacticalException("Expected interface Line " + _currentToken.Line + " Col " +
                                               _currentToken.Column);
            var idlexeme=_currentToken = _lexer.GetNextToken();
            if (_currentToken.Type != TokenType.Id)
                throw new SintacticalException("Expected Id Line " + _currentToken.Line + " Col " +
                                               _currentToken.Column);
            _currentToken = _lexer.GetNextToken();
            var extendsNode=Heredance();
            var body=InterfaceBody();
            return new InterfaceStructureNode(idlexeme.Lexeme, extendsNode,body);
        }

        private InterfaceBodyNode InterfaceBody()
        {
            if (_currentToken.Type != TokenType.KeyOpen)
                throw new SintacticalException("Expected { Line " + _currentToken.Line + " Col " +
                                               _currentToken.Column);
            _currentToken = _lexer.GetNextToken();
            var list=InterfaceMemberDeclarations();
            if (_currentToken.Type != TokenType.KeyClose)
                throw new SintacticalException("Expected } Line " + _currentToken.Line + " Col " +
                                               _currentToken.Column);
            _currentToken = _lexer.GetNextToken();
            return new InterfaceBodyNode{ InterfaceMethodList = list};
        }

        private List<InterfaceMethodNode> InterfaceMemberDeclarations()
        {
            if (_currentToken.Type.IsType() || _currentToken.Type == TokenType.RwVoid)
            {
                var interfaceMethod = InterfaceElement();
                var list=InterfaceMemberDeclarations();
                list.Insert(0,interfaceMethod);
                return list;
            }
            else
            {
                return new List<InterfaceMethodNode>();
            }
        }

        private InterfaceMethodNode InterfaceElement()
        {
            if (_currentToken.Type.IsType())
            {
                var typeNode=TypeProduction();

                var idLexeme = _currentToken.Lexeme;
                if (_currentToken.Type != TokenType.Id)
                    throw new SintacticalException("Expected Id Line " + _currentToken.Line + " Col " +
                                                   _currentToken.Column);
                _currentToken = _lexer.GetNextToken();
                var parameterLst=MethodProperty();

                return new InterfaceMethodNode { TypeNode = typeNode, Name = idLexeme ,  ParameterList=parameterLst };
            }
            else if (_currentToken.Type == TokenType.RwVoid)
            {
                var voidNode = new VoidTypeNode();
                var idLexeme=_currentToken = _lexer.GetNextToken();
                if (_currentToken.Type != TokenType.Id)
                    throw new SintacticalException("Expected Id Line " + _currentToken.Line + " Col " +
                                                   _currentToken.Column);
                _currentToken = _lexer.GetNextToken();
                var list=MethodProperty();

                return new InterfaceMethodNode { TypeNode = voidNode, Name = idLexeme.Lexeme, ParameterList = list };
            }
            else
            {
                throw new SintacticalException("Expected type or void Line " + _currentToken.Line + " Col " +
                                                _currentToken.Column);
            }
        }

        private List<ParameterNode> MethodProperty()
        {
            if (_currentToken.Type == TokenType.ParOpen)
            {
                var list=MethodHeader();
                if (_currentToken.Type != TokenType.EndStatement)
                    throw new SintacticalException("Expected ; Line " + _currentToken.Line + " Col " +
                                                   _currentToken.Column);
                _currentToken = _lexer.GetNextToken();
                return list;
            }
            else
            {
                throw new SintacticalException("Expected ( Line " + _currentToken.Line + " Col " +
                                                _currentToken.Column);
            }
        }

        private List<ParameterNode> MethodHeader()
        {
            if (_currentToken.Type != TokenType.ParOpen)
                throw new SintacticalException("Expected ( Line " + _currentToken.Line + " Col " +
                                               _currentToken.Column);
            _currentToken = _lexer.GetNextToken();
            var parameterlist=FormalParameterList();
            if (_currentToken.Type != TokenType.ParClose)
                throw new SintacticalException("Expected ) Line " + _currentToken.Line + " Col " +
                                               _currentToken.Column);
            _currentToken = _lexer.GetNextToken();
            return parameterlist;
        }

        private List<ParameterNode> FormalParameterList()
        {
            if (_currentToken.Type.IsType())
            {
                var p=Parameter();
                var list=FormalParameterListPrime();
                list.Insert(0,p);
                return list;
            }
            else
            {
                return new List<ParameterNode>();
            }
        }

        private List<ParameterNode> FormalParameterListPrime()
        {
            if (_currentToken.Type == TokenType.Comma)
            {
                _currentToken = _lexer.GetNextToken();
                var parameter=Parameter();
                var list=FormalParameterListPrime();
                list.Insert(0,parameter);
                return list;
            }
            else
            {
                return new List<ParameterNode>();
            }
        }

        private ParameterNode Parameter()
        {
            var type=TypeProduction();
            var idlexeme = _currentToken.Lexeme;
            if (_currentToken.Type != TokenType.Id)
                throw new SintacticalException("Expected Id Line " + _currentToken.Line + " Col " +
                                               _currentToken.Column);
            _currentToken = _lexer.GetNextToken();
            return new ParameterNode { typeNode = type, Name = idlexeme };
        }

        private EnumStructureNode EnumDeclaration()
        {
            if (_currentToken.Type != TokenType.RwEnum)
                throw new SintacticalException("Expected enum Line " + _currentToken.Line + " Col " +
                                               _currentToken.Column);
            
            _currentToken = _lexer.GetNextToken();
            var idlexeme = _currentToken.Lexeme;
            if (_currentToken.Type != TokenType.Id)
                throw new SintacticalException("Expected Id Line " + _currentToken.Line + " Col " +
                                               _currentToken.Column);
            _currentToken = _lexer.GetNextToken();
            var enumbody=EnumBody();
            return new EnumStructureNode { Name=idlexeme , Body=enumbody };
        }

        private EnumBodyNode EnumBody()
        {
            if (_currentToken.Type != TokenType.KeyOpen)
                throw new SintacticalException("Expected { Line " + _currentToken.Line + " Col " +
                                               _currentToken.Column);
            _currentToken = _lexer.GetNextToken();
            var list=EnumMemberDeclaration();
            if (_currentToken.Type != TokenType.KeyClose)
                throw new SintacticalException("Expected } Line " + _currentToken.Line + " Col " +
                                               _currentToken.Column);
            _currentToken = _lexer.GetNextToken();
            return new EnumBodyNode {  EnumElementList = list };
        }

        private List<EnumElementNode> EnumMemberDeclaration()
        {
            if (_currentToken.Type == TokenType.Id)
            {
				var element = EnumElement();
				var list = EnumMemberDeclarationPrime();
				list.Insert(0, element);
				return list;
            }
            else
            {
                return new List<EnumElementNode>();
            }
        }

        private List<EnumElementNode> EnumMemberDeclarationPrime()
        {
            if (_currentToken.Type == TokenType.Comma)
            {
                _currentToken = _lexer.GetNextToken();
                var element=EnumElement();
                var list=EnumMemberDeclarationPrime();
                list.Insert(0,element);
                return list;
            }
            else
            {
                return new List<EnumElementNode>();
            }
        }

        private EnumElementNode EnumElement()
        {
            var idlexeme = _currentToken.Lexeme;
            if (_currentToken.Type != TokenType.Id)
                throw new SintacticalException("Expected Id Line " + _currentToken.Line + " Col " +
                                               _currentToken.Column);
            _currentToken = _lexer.GetNextToken();
            var expressionNode=EnumElementBody();
            return new EnumElementNode { Name = idlexeme, Expression = expressionNode };
        }

        private ExpressionNode EnumElementBody()
        {
            if (_currentToken.Type == TokenType.OpAsgn)
            {
                _currentToken = _lexer.GetNextToken();
                return Expresion();
            }
            else
            {
                return null;
            }
        }

        private ClassStructureNode ClassDeclaration()
        {
            var classModifier=ClassModifier();
            if (_currentToken.Type != TokenType.RwClass)
                throw new SintacticalException("Expected class Line " + _currentToken.Line + " Col " +
                                               _currentToken.Column);
            var idlexeme=_currentToken = _lexer.GetNextToken();
            if (_currentToken.Type != TokenType.Id)
                throw new SintacticalException("Expected Id Line " + _currentToken.Line + " Col " +
                                               _currentToken.Column);
            _currentToken = _lexer.GetNextToken();
            var extendsNode=Heredance();
            var body= ClassBody();
            return  new ClassStructureNode{ModifierNode = classModifier,Name = idlexeme.Lexeme,ExtendsNode = extendsNode,Body = body};
        }

        private ClassBodyNode ClassBody()
        {
            if (_currentToken.Type != TokenType.KeyOpen)
                throw new SintacticalException("Expected { Line " + _currentToken.Line + " Col " +
                                               _currentToken.Column);
            _currentToken = _lexer.GetNextToken();
            var list=ClassMemberDeclarations();
            if (_currentToken.Type != TokenType.KeyClose)
                throw new SintacticalException("Expected } Line " + _currentToken.Line + " Col " +
                                               _currentToken.Column);
            _currentToken = _lexer.GetNextToken();
            return new ClassBodyNode{ClassMemberDeclarationList = list };
        }

        private List<ClassMemberDeclaration> ClassMemberDeclarations()
        {

            if (_currentToken.Type.IsPrivacyModifier() || _currentToken.Type == TokenType.RwStatic || _currentToken.Type.IsType() || _currentToken.Type == TokenType.RwVoid
              || _currentToken.Type.IsMethodModifiers())
            {

                var x=ClassMemberDeclaration();
                var list=ClassMemberDeclarations();
                list.Insert(0,x);
                return list;
            }
            else
            {
                return new List<ClassMemberDeclaration>();
            }
        }

        private ClassMemberDeclaration ClassMemberDeclaration()
        {
            var privacyNode=PrivacyModifier();
            if (_currentToken.Type == TokenType.RwAbstract)
            {
                _currentToken = _lexer.GetNextToken();
                var x=InterfaceElement();
                
                return new ClassAbstractMemberDeclaration { PrivacyNode = privacyNode, Name = x.Name,ParameterList = x.ParameterList,TypeNode = x.TypeNode};
            }
            else
            {
                return FieldMethodPropertyConstructor();
            }
        }

        private ClassMemberDeclaration FieldMethodPropertyConstructor()
        {
            if (_currentToken.Type == TokenType.RwStatic)
            {
                _currentToken = _lexer.GetNextToken();
                return StaticOptions();
            }
            else if (_currentToken.Type.IsPredifinedType() || _currentToken.Type == TokenType.RwEnum)
            {
                var type=CustomTypeProduction();
                var id = _currentToken.Lexeme;
                if (_currentToken.Type != TokenType.Id)
                    throw new SintacticalException("Expected Id Line " + _currentToken.Line + " Col " +
                                                   _currentToken.Column);
                _currentToken = _lexer.GetNextToken();
                var fieldormethod=FieldMethodPropertyDeclaration(id);
                return new FieldMemberDeclaration { Type = type, FieldMethod = fieldormethod ,MethodModifer = null};

            }
            else if (_currentToken.Type == TokenType.RwVoid)
            {
                _currentToken = _lexer.GetNextToken();
                var id = _currentToken.Lexeme;
                if (_currentToken.Type != TokenType.Id)
                    throw new SintacticalException("Expected Id Line " + _currentToken.Line + " Col " +
                                                   _currentToken.Column);
                _currentToken = _lexer.GetNextToken();
                var method=MethodDeclaration(id);
                return new FieldMemberDeclaration { Type = new VoidTypeNode(), FieldMethod = method ,MethodModifer = null};
            }
            else if (_currentToken.Type.IsMethodModifiers())
            {
                var method =MethodModifiers();
                return MethodReturn(method);
            }
            else if (_currentToken.Type == TokenType.Id)
            {
                var typeNode = TypeName();
                var type = new IdTypeProductionNode();
                type.IdType = typeNode;
                    
                return Mierda3(type);
            }
            else
            {
                throw new SintacticalException("Expected Primitive type, enum , void, static , Id or method modifiers Line " + _currentToken.Line + " Col " +
                                                   _currentToken.Column);
            }
        }

        private ClassMemberDeclaration Mierda3(IdTypeProductionNode type)
        {
            if (_currentToken.Type == TokenType.Id || _currentToken.Type == TokenType.BraOpen)
            {
                var rankspecList = TypeProductionPrime();
                type.rankSpecifiers = rankspecList;
                var idlexeme = _currentToken.Lexeme;
                if (_currentToken.Type != TokenType.Id)
                    throw new SintacticalException("Expected Id Line " + _currentToken.Line + " Col " +
                                                   _currentToken.Column);
                _currentToken = _lexer.GetNextToken();
                var f=FieldMethodPropertyDeclaration(idlexeme);
                return new FieldMemberDeclaration { Type = type, FieldMethod = f };
            }
            else if (_currentToken.Type == TokenType.ParOpen)
            {
                if (_currentToken.Type != TokenType.ParOpen)
                    throw new SintacticalException("Expected ( Line " + _currentToken.Line + " Col " +
                                                   _currentToken.Column);
                _currentToken = _lexer.GetNextToken();
                var paremeterList=FormalParameterList();
                if (_currentToken.Type != TokenType.ParClose)
                    throw new SintacticalException("Expected ) Line " + _currentToken.Line + " Col " +
                                                   _currentToken.Column);
                _currentToken = _lexer.GetNextToken();
                var constructInit=ConstructorInitializer();
                var statementList=Block();
                return new ConstructorNode { Type = type, StatementList = statementList , ConstructorInitalizer= constructInit };
            }
            else
            {
                throw new SintacticalException("Expected Id or ( Line " + _currentToken.Line + " Col " +
                                                     _currentToken.Column);
            }

        }

        private ClassMemberDeclaration Mierda2(IdTypeProductionNode type)
        {
            if (_currentToken.Type == TokenType.ParOpen)
            {
                _currentToken = _lexer.GetNextToken();
                if (_currentToken.Type != TokenType.ParClose)
                    throw new SintacticalException("Expected ) Line " + _currentToken.Line + " Col " +
                                                   _currentToken.Column);
                _currentToken = _lexer.GetNextToken();
                var statementList = Block();
                return new StaticConstructorNode { Type = type, StatementList = statementList };
            }
            else if (_currentToken.Type == TokenType.Id || _currentToken.Type == TokenType.BraOpen)
            {
                var rankspecList = TypeProductionPrime();
                type.rankSpecifiers = rankspecList;
                var idlexeme = _currentToken.Lexeme;
                if (_currentToken.Type != TokenType.Id)
                    throw new SintacticalException("Expected Id Line " + _currentToken.Line + " Col " +
                                                   _currentToken.Column);
                _currentToken = _lexer.GetNextToken();

                var FieldMethodDeclaration = FieldMethodPropertyDeclaration(idlexeme);
                return new StaticFieldMemberDeclaration { Type = type, FieldMethod = FieldMethodDeclaration };
            }
            else
            {
                throw new SintacticalException("Expected ( or Id Line " + _currentToken.Line + " Col " +
                                               _currentToken.Column);
            }

        }

        private ConstructorInitalizerNode ConstructorInitializer()
        {
            if (_currentToken.Type == TokenType.Colon)
            {
                _currentToken = _lexer.GetNextToken();
                return ConstructorInitializerPrime();
            }
            else
            {
                return null;
            }
        }

        private ConstructorInitalizerNode ConstructorInitializerPrime()
        {
            if (_currentToken.Type == TokenType.RwBase || _currentToken.Type == TokenType.RwThis)
            {
                _currentToken = _lexer.GetNextToken();
                if (_currentToken.Type != TokenType.ParOpen)
                    throw new SintacticalException("Expected ( Line " + _currentToken.Line + " Col " +
                                                   _currentToken.Column);
                _currentToken = _lexer.GetNextToken();
                var expList=ArgumentList();
                if (_currentToken.Type != TokenType.ParClose)
                    throw new SintacticalException("Expected ) Line " + _currentToken.Line + " Col " +
                                                   _currentToken.Column);
                _currentToken = _lexer.GetNextToken();
                return  new BaseConstructor{ArgumeList = expList};

            }else if (_currentToken.Type == TokenType.RwThis)
            {
                _currentToken = _lexer.GetNextToken();
                if (_currentToken.Type != TokenType.ParOpen)
                    throw new SintacticalException("Expected ( Line " + _currentToken.Line + " Col " +
                                                   _currentToken.Column);
                _currentToken = _lexer.GetNextToken();
                var expList = ArgumentList();
                if (_currentToken.Type != TokenType.ParClose)
                    throw new SintacticalException("Expected ) Line " + _currentToken.Line + " Col " +
                                                   _currentToken.Column);
                _currentToken = _lexer.GetNextToken();
                return new ThisConstructor {ArgumeList = expList};
            }
            else
            {
                throw new SintacticalException("Expected this or base constructor Line " + _currentToken.Line + " Col " +
                                               _currentToken.Column);
            }
        }

        private List<ExpressionNode> ArgumentList()
        {
            if (_currentToken.Type.IsExpression())
            {
                var exp=Expresion();
                var list=ArgumentListPrime();
                list.Insert(0,exp);
                return list;
            }
            else
            {
				return new List<ExpressionNode>();
            }
        }

        private List<ExpressionNode> ArgumentListPrime()
        {
            if (_currentToken.Type == TokenType.Comma)
            {
                _currentToken = _lexer.GetNextToken();
                var exp=Expresion();
                var list=ArgumentListPrime();
                list.Insert(0,exp);
                return list;
            }
            else
            {
                return new List<ExpressionNode>();
            }
        }

        private ClassMemberDeclaration MethodReturn(MethodModifierNode method)
        {
            if (_currentToken.Type == TokenType.RwVoid)
            {
                var id=_currentToken = _lexer.GetNextToken();
                if (_currentToken.Type != TokenType.Id)
                    throw new SintacticalException("Expected Id Line " + _currentToken.Line + " Col " +
                                                   _currentToken.Column);
                _currentToken = _lexer.GetNextToken();
                var methodDec=MethodDeclaration(id.Lexeme);

                return new FieldMemberDeclaration { MethodModifer=method ,Type = new VoidTypeNode(), FieldMethod = methodDec };
            }
            else if (_currentToken.Type.IsType())
            {
                var type=TypeProduction();
                var id = _currentToken.Lexeme;
                if (_currentToken.Type != TokenType.Id)
                    throw new SintacticalException("Expected Id Line " + _currentToken.Line + " Col " +
                                                   _currentToken.Column);
                _currentToken = _lexer.GetNextToken();
                var methodDec=MethodDeclaration(id);
                return new FieldMemberDeclaration { MethodModifer = method, Type = type, FieldMethod = methodDec };
            }
            else
            {
                throw new SintacticalException("Expected void or type Line " + _currentToken.Line + " Col " +
                                                  _currentToken.Column);
            }
        }

        private ClassMemberDeclaration StaticOptions()
        {
            if (_currentToken.Type.IsPredifinedType() || _currentToken.Type == TokenType.RwEnum)
            {
                var type=CustomTypeProduction();
                var idlexme = _currentToken.Lexeme;
                if (_currentToken.Type != TokenType.Id)
                    throw new SintacticalException("Expected Id Line " + _currentToken.Line + " Col " +
                                                   _currentToken.Column);
                _currentToken = _lexer.GetNextToken();
                var FieldMethodDeclaration=FieldMethodPropertyDeclaration(idlexme);
                return new StaticFieldMemberDeclaration { Type=type, FieldMethod= FieldMethodDeclaration };
            }
            else if (_currentToken.Type == TokenType.RwVoid)
            {
                _currentToken = _lexer.GetNextToken();
                var idlexme = _currentToken.Lexeme;
                if (_currentToken.Type != TokenType.Id)
                    throw new SintacticalException("Expected Id Line " + _currentToken.Line + " Col " +
                                                   _currentToken.Column);
                _currentToken = _lexer.GetNextToken();
                var method=MethodDeclaration(idlexme);
                return new StaticFieldMemberDeclaration { Type = new VoidTypeNode(), FieldMethod = method };
            }
            else if (_currentToken.Type == TokenType.Id)
            {
                var typeNode=TypeName();
                var type= new IdTypeProductionNode();
                type.IdType = typeNode;
                return Mierda2(type);
            }
            else
            {
                throw new SintacticalException("Expected Primitive type ,enum,void or id Line " + _currentToken.Line + " Col " +
                                                   _currentToken.Column);
            }
        }

        private FieldMethodDeclarationNode FieldMethodPropertyDeclaration(string idlexme)
        {
            if (_currentToken.Type == TokenType.ParOpen)
            {
                return MethodDeclaration(idlexme);
            }
            else
            {
                var list=FieldDeclaration(idlexme);
                return new FieldDeclarationNode{FieldList =list};

            }

        }

        private List<FieldNode> FieldDeclaration(string idlexme)
        {
            var list=FieldDeclarations(idlexme);
            if (_currentToken.Type != TokenType.EndStatement)
                throw new SintacticalException("Expected ; Line " + _currentToken.Line + " Col " +
                                               _currentToken.Column);
            _currentToken = _lexer.GetNextToken();
            return list;
        }

        private List<FieldNode> FieldDeclarations(string idlexme)
        {
            var exp=FieldAssignation();
            var list=FieldDeclarationsPrime();
            var f = new FieldNode {Name = idlexme, ExpressionNode = exp};
            list.Insert(0,f);
            return list;
        }

        private List<FieldNode> FieldDeclarationsPrime()
        {
            if (_currentToken.Type == TokenType.Comma)
            {
                var id=_currentToken = _lexer.GetNextToken();
                if (_currentToken.Type != TokenType.Id)
                    throw new SintacticalException("Expected Id Line " + _currentToken.Line + " Col " +
                                                   _currentToken.Column);
                _currentToken = _lexer.GetNextToken();
                var exp=FieldAssignation();
                var field = new FieldNode{Name = id.Lexeme,ExpressionNode = exp};
                var list=FieldDeclarationsPrime();
                list.Insert(0,field);
                return list;
            }
            else
            {
                return  new List<FieldNode>();
            }
        }

        private ExpressionNode FieldAssignation()
        {
            if (_currentToken.Type == TokenType.OpAsgn)
            {
                _currentToken = _lexer.GetNextToken();
                return VaraibleInitializer();
            }
            else
            {
                return null;
            }

        }

        private ExpressionNode VaraibleInitializer()
        {
            if (_currentToken.Type == TokenType.KeyOpen)
            {
                return ArrayInitalizer();
            }
            else if (_currentToken.Type.IsExpression())
            {
                return Expresion();
            }
            else
            {
                throw new SintacticalException("Expected valid variable initalizer Line " + _currentToken.Line + " Col " +
                                               _currentToken.Column);
            }
        }

        private ArrayInitalizerNode ArrayInitalizer()
        {
            if (_currentToken.Type != TokenType.KeyOpen)
                throw new SintacticalException("Expected { Line " + _currentToken.Line + " Col " +
                                               _currentToken.Column);
            _currentToken = _lexer.GetNextToken();
            var list=VaraibleInitializerListOpt();
            if (_currentToken.Type != TokenType.KeyClose)
                throw new SintacticalException("Expected } Line " + _currentToken.Line + " Col " +
                                               _currentToken.Column);
            _currentToken = _lexer.GetNextToken();
            return new ArrayInitalizerNode { ExpressionList = list};
        }

        private MethodDeclarationNode MethodDeclaration(string idlexme)
        {
            var parameterlist=MethodHeader();
            var statementlist=Block();
            return new MethodDeclarationNode {Name= idlexme, ParameterList =parameterlist,StatementList = statementlist};
        }

        private MethodModifierNode MethodModifiers()
        {
            if (_currentToken.Type == TokenType.RwAbstract)
            {
                _currentToken = _lexer.GetNextToken();
                return new AbstractMethodModifer();
            }else if (_currentToken.Type == TokenType.RwOverride)
            {
                _currentToken = _lexer.GetNextToken();
                return new OverrideMethodModifer();
            }
            else
            {
                throw new SintacticalException("Expected abstract or override Line " + _currentToken.Line + " Col " +
                                               _currentToken.Column);
            }
        }

        private ExtendsNode Heredance()
        {
            if (_currentToken.Type == TokenType.Colon)
            {
                _currentToken = _lexer.GetNextToken();
                var idnode=TypeName();
                var list=Base();
                list.Insert(0,idnode);
                return new ExtendsNode(list);
            }
            else
            {
                return null;
            }
        }

        private List<IdTypeNode> Base()
        {
            if (_currentToken.Type == TokenType.Comma)
            {
                _currentToken = _lexer.GetNextToken();
                var idNode = TypeName();
                var list=Base();
                list.Insert(0,idNode);
                return list;
            }
            else
            {
                return new List<IdTypeNode>();
            }
        }

        private ClassModifierNode ClassModifier()
        {
            if (_currentToken.Type == TokenType.RwStatic)
            {
                _currentToken = _lexer.GetNextToken();
                return new StaticNode();
            }else if (_currentToken.Type==TokenType.RwAbstract)
            {
                _currentToken = _lexer.GetNextToken();
                return new AbstractNode();
            }
            else
            {
                return null;
            }
        }
